config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapi
spec:
  rules:
    - http:
        paths:
          - path: /cats-api
            pathType: Prefix
            backend:
              service:
                name: cats-api
                port:
                  number: 80

          - path: /jokes
            pathType: Prefix
            backend:
              service:
                name: jokes
                port:
                  number: 80

          - path: /spring-admin
            pathType: Prefix
            backend:
              service:
                name: spring-admin
                port:
                  number: 80
